[gd_scene load_steps=5 format=3 uid="uid://cj4gjbh1a8a60"]

[ext_resource type="Script" path="res://scripts/grid-cell.gd" id="1_emumk"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_m0d64"]
resource_local_to_scene = true
transparency = 1
albedo_color = Color(1, 1, 0.0588235, 0.0941176)
emission = Color(0.933333, 0.752941, 0.764706, 1)
emission_energy_multiplier = 0.5
refraction_scale = -1.0

[sub_resource type="PlaneMesh" id="PlaneMesh_v7jgc"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_m0d64")
size = Vector2(0.5, 0.5)
subdivide_width = 10
subdivide_depth = 10
center_offset = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_7y6el"]
data = PackedVector3Array(0.25, 0, 0.25, 0.2045, 0, 0.25, 0.25, 0, 0.2045, 0.2045, 0, 0.25, 0.2045, 0, 0.2045, 0.25, 0, 0.2045, 0.2045, 0, 0.25, 0.1591, 0, 0.25, 0.2045, 0, 0.2045, 0.1591, 0, 0.25, 0.1591, 0, 0.2045, 0.2045, 0, 0.2045, 0.1591, 0, 0.25, 0.1136, 0, 0.25, 0.1591, 0, 0.2045, 0.1136, 0, 0.25, 0.1136, 0, 0.2045, 0.1591, 0, 0.2045, 0.1136, 0, 0.25, 0.0682, 0, 0.25, 0.1136, 0, 0.2045, 0.0682, 0, 0.25, 0.0682, 0, 0.2045, 0.1136, 0, 0.2045, 0.0682, 0, 0.25, 0.0227, 0, 0.25, 0.0682, 0, 0.2045, 0.0227, 0, 0.25, 0.0227, 0, 0.2045, 0.0682, 0, 0.2045, 0.0227, 0, 0.25, -0.0227, 0, 0.25, 0.0227, 0, 0.2045, -0.0227, 0, 0.25, -0.0227, 0, 0.2045, 0.0227, 0, 0.2045, -0.0227, 0, 0.25, -0.0682, 0, 0.25, -0.0227, 0, 0.2045, -0.0682, 0, 0.25, -0.0682, 0, 0.2045, -0.0227, 0, 0.2045, -0.0682, 0, 0.25, -0.1136, 0, 0.25, -0.0682, 0, 0.2045, -0.1136, 0, 0.25, -0.1136, 0, 0.2045, -0.0682, 0, 0.2045, -0.1136, 0, 0.25, -0.1591, 0, 0.25, -0.1136, 0, 0.2045, -0.1591, 0, 0.25, -0.1591, 0, 0.2045, -0.1136, 0, 0.2045, -0.1591, 0, 0.25, -0.2045, 0, 0.25, -0.1591, 0, 0.2045, -0.2045, 0, 0.25, -0.2045, 0, 0.2045, -0.1591, 0, 0.2045, -0.2045, 0, 0.25, -0.25, 0, 0.25, -0.2045, 0, 0.2045, -0.25, 0, 0.25, -0.25, 0, 0.2045, -0.2045, 0, 0.2045, 0.25, 0, 0.2045, 0.2045, 0, 0.2045, 0.25, 0, 0.1591, 0.2045, 0, 0.2045, 0.2045, 0, 0.1591, 0.25, 0, 0.1591, 0.2045, 0, 0.2045, 0.1591, 0, 0.2045, 0.2045, 0, 0.1591, 0.1591, 0, 0.2045, 0.1591, 0, 0.1591, 0.2045, 0, 0.1591, 0.1591, 0, 0.2045, 0.1136, 0, 0.2045, 0.1591, 0, 0.1591, 0.1136, 0, 0.2045, 0.1136, 0, 0.1591, 0.1591, 0, 0.1591, 0.1136, 0, 0.2045, 0.0682, 0, 0.2045, 0.1136, 0, 0.1591, 0.0682, 0, 0.2045, 0.0682, 0, 0.1591, 0.1136, 0, 0.1591, 0.0682, 0, 0.2045, 0.0227, 0, 0.2045, 0.0682, 0, 0.1591, 0.0227, 0, 0.2045, 0.0227, 0, 0.1591, 0.0682, 0, 0.1591, 0.0227, 0, 0.2045, -0.0227, 0, 0.2045, 0.0227, 0, 0.1591, -0.0227, 0, 0.2045, -0.0227, 0, 0.1591, 0.0227, 0, 0.1591, -0.0227, 0, 0.2045, -0.0682, 0, 0.2045, -0.0227, 0, 0.1591, -0.0682, 0, 0.2045, -0.0682, 0, 0.1591, -0.0227, 0, 0.1591, -0.0682, 0, 0.2045, -0.1136, 0, 0.2045, -0.0682, 0, 0.1591, -0.1136, 0, 0.2045, -0.1136, 0, 0.1591, -0.0682, 0, 0.1591, -0.1136, 0, 0.2045, -0.1591, 0, 0.2045, -0.1136, 0, 0.1591, -0.1591, 0, 0.2045, -0.1591, 0, 0.1591, -0.1136, 0, 0.1591, -0.1591, 0, 0.2045, -0.2045, 0, 0.2045, -0.1591, 0, 0.1591, -0.2045, 0, 0.2045, -0.2045, 0, 0.1591, -0.1591, 0, 0.1591, -0.2045, 0, 0.2045, -0.25, 0, 0.2045, -0.2045, 0, 0.1591, -0.25, 0, 0.2045, -0.25, 0, 0.1591, -0.2045, 0, 0.1591, 0.25, 0, 0.1591, 0.2045, 0, 0.1591, 0.25, 0, 0.1136, 0.2045, 0, 0.1591, 0.2045, 0, 0.1136, 0.25, 0, 0.1136, 0.2045, 0, 0.1591, 0.1591, 0, 0.1591, 0.2045, 0, 0.1136, 0.1591, 0, 0.1591, 0.1591, 0, 0.1136, 0.2045, 0, 0.1136, 0.1591, 0, 0.1591, 0.1136, 0, 0.1591, 0.1591, 0, 0.1136, 0.1136, 0, 0.1591, 0.1136, 0, 0.1136, 0.1591, 0, 0.1136, 0.1136, 0, 0.1591, 0.0682, 0, 0.1591, 0.1136, 0, 0.1136, 0.0682, 0, 0.1591, 0.0682, 0, 0.1136, 0.1136, 0, 0.1136, 0.0682, 0, 0.1591, 0.0227, 0, 0.1591, 0.0682, 0, 0.1136, 0.0227, 0, 0.1591, 0.0227, 0, 0.1136, 0.0682, 0, 0.1136, 0.0227, 0, 0.1591, -0.0227, 0, 0.1591, 0.0227, 0, 0.1136, -0.0227, 0, 0.1591, -0.0227, 0, 0.1136, 0.0227, 0, 0.1136, -0.0227, 0, 0.1591, -0.0682, 0, 0.1591, -0.0227, 0, 0.1136, -0.0682, 0, 0.1591, -0.0682, 0, 0.1136, -0.0227, 0, 0.1136, -0.0682, 0, 0.1591, -0.1136, 0, 0.1591, -0.0682, 0, 0.1136, -0.1136, 0, 0.1591, -0.1136, 0, 0.1136, -0.0682, 0, 0.1136, -0.1136, 0, 0.1591, -0.1591, 0, 0.1591, -0.1136, 0, 0.1136, -0.1591, 0, 0.1591, -0.1591, 0, 0.1136, -0.1136, 0, 0.1136, -0.1591, 0, 0.1591, -0.2045, 0, 0.1591, -0.1591, 0, 0.1136, -0.2045, 0, 0.1591, -0.2045, 0, 0.1136, -0.1591, 0, 0.1136, -0.2045, 0, 0.1591, -0.25, 0, 0.1591, -0.2045, 0, 0.1136, -0.25, 0, 0.1591, -0.25, 0, 0.1136, -0.2045, 0, 0.1136, 0.25, 0, 0.1136, 0.2045, 0, 0.1136, 0.25, 0, 0.0682, 0.2045, 0, 0.1136, 0.2045, 0, 0.0682, 0.25, 0, 0.0682, 0.2045, 0, 0.1136, 0.1591, 0, 0.1136, 0.2045, 0, 0.0682, 0.1591, 0, 0.1136, 0.1591, 0, 0.0682, 0.2045, 0, 0.0682, 0.1591, 0, 0.1136, 0.1136, 0, 0.1136, 0.1591, 0, 0.0682, 0.1136, 0, 0.1136, 0.1136, 0, 0.0682, 0.1591, 0, 0.0682, 0.1136, 0, 0.1136, 0.0682, 0, 0.1136, 0.1136, 0, 0.0682, 0.0682, 0, 0.1136, 0.0682, 0, 0.0682, 0.1136, 0, 0.0682, 0.0682, 0, 0.1136, 0.0227, 0, 0.1136, 0.0682, 0, 0.0682, 0.0227, 0, 0.1136, 0.0227, 0, 0.0682, 0.0682, 0, 0.0682, 0.0227, 0, 0.1136, -0.0227, 0, 0.1136, 0.0227, 0, 0.0682, -0.0227, 0, 0.1136, -0.0227, 0, 0.0682, 0.0227, 0, 0.0682, -0.0227, 0, 0.1136, -0.0682, 0, 0.1136, -0.0227, 0, 0.0682, -0.0682, 0, 0.1136, -0.0682, 0, 0.0682, -0.0227, 0, 0.0682, -0.0682, 0, 0.1136, -0.1136, 0, 0.1136, -0.0682, 0, 0.0682, -0.1136, 0, 0.1136, -0.1136, 0, 0.0682, -0.0682, 0, 0.0682, -0.1136, 0, 0.1136, -0.1591, 0, 0.1136, -0.1136, 0, 0.0682, -0.1591, 0, 0.1136, -0.1591, 0, 0.0682, -0.1136, 0, 0.0682, -0.1591, 0, 0.1136, -0.2045, 0, 0.1136, -0.1591, 0, 0.0682, -0.2045, 0, 0.1136, -0.2045, 0, 0.0682, -0.1591, 0, 0.0682, -0.2045, 0, 0.1136, -0.25, 0, 0.1136, -0.2045, 0, 0.0682, -0.25, 0, 0.1136, -0.25, 0, 0.0682, -0.2045, 0, 0.0682, 0.25, 0, 0.0682, 0.2045, 0, 0.0682, 0.25, 0, 0.0227, 0.2045, 0, 0.0682, 0.2045, 0, 0.0227, 0.25, 0, 0.0227, 0.2045, 0, 0.0682, 0.1591, 0, 0.0682, 0.2045, 0, 0.0227, 0.1591, 0, 0.0682, 0.1591, 0, 0.0227, 0.2045, 0, 0.0227, 0.1591, 0, 0.0682, 0.1136, 0, 0.0682, 0.1591, 0, 0.0227, 0.1136, 0, 0.0682, 0.1136, 0, 0.0227, 0.1591, 0, 0.0227, 0.1136, 0, 0.0682, 0.0682, 0, 0.0682, 0.1136, 0, 0.0227, 0.0682, 0, 0.0682, 0.0682, 0, 0.0227, 0.1136, 0, 0.0227, 0.0682, 0, 0.0682, 0.0227, 0, 0.0682, 0.0682, 0, 0.0227, 0.0227, 0, 0.0682, 0.0227, 0, 0.0227, 0.0682, 0, 0.0227, 0.0227, 0, 0.0682, -0.0227, 0, 0.0682, 0.0227, 0, 0.0227, -0.0227, 0, 0.0682, -0.0227, 0, 0.0227, 0.0227, 0, 0.0227, -0.0227, 0, 0.0682, -0.0682, 0, 0.0682, -0.0227, 0, 0.0227, -0.0682, 0, 0.0682, -0.0682, 0, 0.0227, -0.0227, 0, 0.0227, -0.0682, 0, 0.0682, -0.1136, 0, 0.0682, -0.0682, 0, 0.0227, -0.1136, 0, 0.0682, -0.1136, 0, 0.0227, -0.0682, 0, 0.0227, -0.1136, 0, 0.0682, -0.1591, 0, 0.0682, -0.1136, 0, 0.0227, -0.1591, 0, 0.0682, -0.1591, 0, 0.0227, -0.1136, 0, 0.0227, -0.1591, 0, 0.0682, -0.2045, 0, 0.0682, -0.1591, 0, 0.0227, -0.2045, 0, 0.0682, -0.2045, 0, 0.0227, -0.1591, 0, 0.0227, -0.2045, 0, 0.0682, -0.25, 0, 0.0682, -0.2045, 0, 0.0227, -0.25, 0, 0.0682, -0.25, 0, 0.0227, -0.2045, 0, 0.0227, 0.25, 0, 0.0227, 0.2045, 0, 0.0227, 0.25, 0, -0.0227, 0.2045, 0, 0.0227, 0.2045, 0, -0.0227, 0.25, 0, -0.0227, 0.2045, 0, 0.0227, 0.1591, 0, 0.0227, 0.2045, 0, -0.0227, 0.1591, 0, 0.0227, 0.1591, 0, -0.0227, 0.2045, 0, -0.0227, 0.1591, 0, 0.0227, 0.1136, 0, 0.0227, 0.1591, 0, -0.0227, 0.1136, 0, 0.0227, 0.1136, 0, -0.0227, 0.1591, 0, -0.0227, 0.1136, 0, 0.0227, 0.0682, 0, 0.0227, 0.1136, 0, -0.0227, 0.0682, 0, 0.0227, 0.0682, 0, -0.0227, 0.1136, 0, -0.0227, 0.0682, 0, 0.0227, 0.0227, 0, 0.0227, 0.0682, 0, -0.0227, 0.0227, 0, 0.0227, 0.0227, 0, -0.0227, 0.0682, 0, -0.0227, 0.0227, 0, 0.0227, -0.0227, 0, 0.0227, 0.0227, 0, -0.0227, -0.0227, 0, 0.0227, -0.0227, 0, -0.0227, 0.0227, 0, -0.0227, -0.0227, 0, 0.0227, -0.0682, 0, 0.0227, -0.0227, 0, -0.0227, -0.0682, 0, 0.0227, -0.0682, 0, -0.0227, -0.0227, 0, -0.0227, -0.0682, 0, 0.0227, -0.1136, 0, 0.0227, -0.0682, 0, -0.0227, -0.1136, 0, 0.0227, -0.1136, 0, -0.0227, -0.0682, 0, -0.0227, -0.1136, 0, 0.0227, -0.1591, 0, 0.0227, -0.1136, 0, -0.0227, -0.1591, 0, 0.0227, -0.1591, 0, -0.0227, -0.1136, 0, -0.0227, -0.1591, 0, 0.0227, -0.2045, 0, 0.0227, -0.1591, 0, -0.0227, -0.2045, 0, 0.0227, -0.2045, 0, -0.0227, -0.1591, 0, -0.0227, -0.2045, 0, 0.0227, -0.25, 0, 0.0227, -0.2045, 0, -0.0227, -0.25, 0, 0.0227, -0.25, 0, -0.0227, -0.2045, 0, -0.0227, 0.25, 0, -0.0227, 0.2045, 0, -0.0227, 0.25, 0, -0.0682, 0.2045, 0, -0.0227, 0.2045, 0, -0.0682, 0.25, 0, -0.0682, 0.2045, 0, -0.0227, 0.1591, 0, -0.0227, 0.2045, 0, -0.0682, 0.1591, 0, -0.0227, 0.1591, 0, -0.0682, 0.2045, 0, -0.0682, 0.1591, 0, -0.0227, 0.1136, 0, -0.0227, 0.1591, 0, -0.0682, 0.1136, 0, -0.0227, 0.1136, 0, -0.0682, 0.1591, 0, -0.0682, 0.1136, 0, -0.0227, 0.0682, 0, -0.0227, 0.1136, 0, -0.0682, 0.0682, 0, -0.0227, 0.0682, 0, -0.0682, 0.1136, 0, -0.0682, 0.0682, 0, -0.0227, 0.0227, 0, -0.0227, 0.0682, 0, -0.0682, 0.0227, 0, -0.0227, 0.0227, 0, -0.0682, 0.0682, 0, -0.0682, 0.0227, 0, -0.0227, -0.0227, 0, -0.0227, 0.0227, 0, -0.0682, -0.0227, 0, -0.0227, -0.0227, 0, -0.0682, 0.0227, 0, -0.0682, -0.0227, 0, -0.0227, -0.0682, 0, -0.0227, -0.0227, 0, -0.0682, -0.0682, 0, -0.0227, -0.0682, 0, -0.0682, -0.0227, 0, -0.0682, -0.0682, 0, -0.0227, -0.1136, 0, -0.0227, -0.0682, 0, -0.0682, -0.1136, 0, -0.0227, -0.1136, 0, -0.0682, -0.0682, 0, -0.0682, -0.1136, 0, -0.0227, -0.1591, 0, -0.0227, -0.1136, 0, -0.0682, -0.1591, 0, -0.0227, -0.1591, 0, -0.0682, -0.1136, 0, -0.0682, -0.1591, 0, -0.0227, -0.2045, 0, -0.0227, -0.1591, 0, -0.0682, -0.2045, 0, -0.0227, -0.2045, 0, -0.0682, -0.1591, 0, -0.0682, -0.2045, 0, -0.0227, -0.25, 0, -0.0227, -0.2045, 0, -0.0682, -0.25, 0, -0.0227, -0.25, 0, -0.0682, -0.2045, 0, -0.0682, 0.25, 0, -0.0682, 0.2045, 0, -0.0682, 0.25, 0, -0.1136, 0.2045, 0, -0.0682, 0.2045, 0, -0.1136, 0.25, 0, -0.1136, 0.2045, 0, -0.0682, 0.1591, 0, -0.0682, 0.2045, 0, -0.1136, 0.1591, 0, -0.0682, 0.1591, 0, -0.1136, 0.2045, 0, -0.1136, 0.1591, 0, -0.0682, 0.1136, 0, -0.0682, 0.1591, 0, -0.1136, 0.1136, 0, -0.0682, 0.1136, 0, -0.1136, 0.1591, 0, -0.1136, 0.1136, 0, -0.0682, 0.0682, 0, -0.0682, 0.1136, 0, -0.1136, 0.0682, 0, -0.0682, 0.0682, 0, -0.1136, 0.1136, 0, -0.1136, 0.0682, 0, -0.0682, 0.0227, 0, -0.0682, 0.0682, 0, -0.1136, 0.0227, 0, -0.0682, 0.0227, 0, -0.1136, 0.0682, 0, -0.1136, 0.0227, 0, -0.0682, -0.0227, 0, -0.0682, 0.0227, 0, -0.1136, -0.0227, 0, -0.0682, -0.0227, 0, -0.1136, 0.0227, 0, -0.1136, -0.0227, 0, -0.0682, -0.0682, 0, -0.0682, -0.0227, 0, -0.1136, -0.0682, 0, -0.0682, -0.0682, 0, -0.1136, -0.0227, 0, -0.1136, -0.0682, 0, -0.0682, -0.1136, 0, -0.0682, -0.0682, 0, -0.1136, -0.1136, 0, -0.0682, -0.1136, 0, -0.1136, -0.0682, 0, -0.1136, -0.1136, 0, -0.0682, -0.1591, 0, -0.0682, -0.1136, 0, -0.1136, -0.1591, 0, -0.0682, -0.1591, 0, -0.1136, -0.1136, 0, -0.1136, -0.1591, 0, -0.0682, -0.2045, 0, -0.0682, -0.1591, 0, -0.1136, -0.2045, 0, -0.0682, -0.2045, 0, -0.1136, -0.1591, 0, -0.1136, -0.2045, 0, -0.0682, -0.25, 0, -0.0682, -0.2045, 0, -0.1136, -0.25, 0, -0.0682, -0.25, 0, -0.1136, -0.2045, 0, -0.1136, 0.25, 0, -0.1136, 0.2045, 0, -0.1136, 0.25, 0, -0.1591, 0.2045, 0, -0.1136, 0.2045, 0, -0.1591, 0.25, 0, -0.1591, 0.2045, 0, -0.1136, 0.1591, 0, -0.1136, 0.2045, 0, -0.1591, 0.1591, 0, -0.1136, 0.1591, 0, -0.1591, 0.2045, 0, -0.1591, 0.1591, 0, -0.1136, 0.1136, 0, -0.1136, 0.1591, 0, -0.1591, 0.1136, 0, -0.1136, 0.1136, 0, -0.1591, 0.1591, 0, -0.1591, 0.1136, 0, -0.1136, 0.0682, 0, -0.1136, 0.1136, 0, -0.1591, 0.0682, 0, -0.1136, 0.0682, 0, -0.1591, 0.1136, 0, -0.1591, 0.0682, 0, -0.1136, 0.0227, 0, -0.1136, 0.0682, 0, -0.1591, 0.0227, 0, -0.1136, 0.0227, 0, -0.1591, 0.0682, 0, -0.1591, 0.0227, 0, -0.1136, -0.0227, 0, -0.1136, 0.0227, 0, -0.1591, -0.0227, 0, -0.1136, -0.0227, 0, -0.1591, 0.0227, 0, -0.1591, -0.0227, 0, -0.1136, -0.0682, 0, -0.1136, -0.0227, 0, -0.1591, -0.0682, 0, -0.1136, -0.0682, 0, -0.1591, -0.0227, 0, -0.1591, -0.0682, 0, -0.1136, -0.1136, 0, -0.1136, -0.0682, 0, -0.1591, -0.1136, 0, -0.1136, -0.1136, 0, -0.1591, -0.0682, 0, -0.1591, -0.1136, 0, -0.1136, -0.1591, 0, -0.1136, -0.1136, 0, -0.1591, -0.1591, 0, -0.1136, -0.1591, 0, -0.1591, -0.1136, 0, -0.1591, -0.1591, 0, -0.1136, -0.2045, 0, -0.1136, -0.1591, 0, -0.1591, -0.2045, 0, -0.1136, -0.2045, 0, -0.1591, -0.1591, 0, -0.1591, -0.2045, 0, -0.1136, -0.25, 0, -0.1136, -0.2045, 0, -0.1591, -0.25, 0, -0.1136, -0.25, 0, -0.1591, -0.2045, 0, -0.1591, 0.25, 0, -0.1591, 0.2045, 0, -0.1591, 0.25, 0, -0.2045, 0.2045, 0, -0.1591, 0.2045, 0, -0.2045, 0.25, 0, -0.2045, 0.2045, 0, -0.1591, 0.1591, 0, -0.1591, 0.2045, 0, -0.2045, 0.1591, 0, -0.1591, 0.1591, 0, -0.2045, 0.2045, 0, -0.2045, 0.1591, 0, -0.1591, 0.1136, 0, -0.1591, 0.1591, 0, -0.2045, 0.1136, 0, -0.1591, 0.1136, 0, -0.2045, 0.1591, 0, -0.2045, 0.1136, 0, -0.1591, 0.0682, 0, -0.1591, 0.1136, 0, -0.2045, 0.0682, 0, -0.1591, 0.0682, 0, -0.2045, 0.1136, 0, -0.2045, 0.0682, 0, -0.1591, 0.0227, 0, -0.1591, 0.0682, 0, -0.2045, 0.0227, 0, -0.1591, 0.0227, 0, -0.2045, 0.0682, 0, -0.2045, 0.0227, 0, -0.1591, -0.0227, 0, -0.1591, 0.0227, 0, -0.2045, -0.0227, 0, -0.1591, -0.0227, 0, -0.2045, 0.0227, 0, -0.2045, -0.0227, 0, -0.1591, -0.0682, 0, -0.1591, -0.0227, 0, -0.2045, -0.0682, 0, -0.1591, -0.0682, 0, -0.2045, -0.0227, 0, -0.2045, -0.0682, 0, -0.1591, -0.1136, 0, -0.1591, -0.0682, 0, -0.2045, -0.1136, 0, -0.1591, -0.1136, 0, -0.2045, -0.0682, 0, -0.2045, -0.1136, 0, -0.1591, -0.1591, 0, -0.1591, -0.1136, 0, -0.2045, -0.1591, 0, -0.1591, -0.1591, 0, -0.2045, -0.1136, 0, -0.2045, -0.1591, 0, -0.1591, -0.2045, 0, -0.1591, -0.1591, 0, -0.2045, -0.2045, 0, -0.1591, -0.2045, 0, -0.2045, -0.1591, 0, -0.2045, -0.2045, 0, -0.1591, -0.25, 0, -0.1591, -0.2045, 0, -0.2045, -0.25, 0, -0.1591, -0.25, 0, -0.2045, -0.2045, 0, -0.2045, 0.25, 0, -0.2045, 0.2045, 0, -0.2045, 0.25, 0, -0.25, 0.2045, 0, -0.2045, 0.2045, 0, -0.25, 0.25, 0, -0.25, 0.2045, 0, -0.2045, 0.1591, 0, -0.2045, 0.2045, 0, -0.25, 0.1591, 0, -0.2045, 0.1591, 0, -0.25, 0.2045, 0, -0.25, 0.1591, 0, -0.2045, 0.1136, 0, -0.2045, 0.1591, 0, -0.25, 0.1136, 0, -0.2045, 0.1136, 0, -0.25, 0.1591, 0, -0.25, 0.1136, 0, -0.2045, 0.0682, 0, -0.2045, 0.1136, 0, -0.25, 0.0682, 0, -0.2045, 0.0682, 0, -0.25, 0.1136, 0, -0.25, 0.0682, 0, -0.2045, 0.0227, 0, -0.2045, 0.0682, 0, -0.25, 0.0227, 0, -0.2045, 0.0227, 0, -0.25, 0.0682, 0, -0.25, 0.0227, 0, -0.2045, -0.0227, 0, -0.2045, 0.0227, 0, -0.25, -0.0227, 0, -0.2045, -0.0227, 0, -0.25, 0.0227, 0, -0.25, -0.0227, 0, -0.2045, -0.0682, 0, -0.2045, -0.0227, 0, -0.25, -0.0682, 0, -0.2045, -0.0682, 0, -0.25, -0.0227, 0, -0.25, -0.0682, 0, -0.2045, -0.1136, 0, -0.2045, -0.0682, 0, -0.25, -0.1136, 0, -0.2045, -0.1136, 0, -0.25, -0.0682, 0, -0.25, -0.1136, 0, -0.2045, -0.1591, 0, -0.2045, -0.1136, 0, -0.25, -0.1591, 0, -0.2045, -0.1591, 0, -0.25, -0.1136, 0, -0.25, -0.1591, 0, -0.2045, -0.2045, 0, -0.2045, -0.1591, 0, -0.25, -0.2045, 0, -0.2045, -0.2045, 0, -0.25, -0.1591, 0, -0.25, -0.2045, 0, -0.2045, -0.25, 0, -0.2045, -0.2045, 0, -0.25, -0.25, 0, -0.2045, -0.25, 0, -0.25, -0.2045, 0, -0.25)

[node name="MeshInstance3D" type="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
mesh = SubResource("PlaneMesh_v7jgc")
script = ExtResource("1_emumk")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0135498, 0)
shape = SubResource("ConcavePolygonShape3D_7y6el")

[connection signal="input_event" from="StaticBody3D" to="." method="_on_body_input_event"]
[connection signal="mouse_entered" from="StaticBody3D" to="." method="_on_body_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody3D" to="." method="_on_body_mouse_exited"]
